# paint-to-print-3d

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: AI_DEVELOPMENT_GUIDE.md  AI_SKIN_CLEANUP_LANE_PLAN.md  COLOR_CONVERSION_FINISH_PLAN.md  DUCKAGENT_HANDOFF_CONTRACT.md  DUCKAGENT_INTEGRATION_PLAN.md  GENERALIZATION_SAMPLE_RESULTS.md  IMPLEMENTATION_PLAN.md  PROVENANCE.md  REGION_TRANSFER_SUCCESS_PLAN.md  REPAIRED_TRANSFER_RESEARCH_AND_ROLLOUT_PLAN.md
examples/: README.md  all_twelve_shading_model_config.json  captain_afro_conductor_lacrosse_shading_model_config.json  captain_afro_conductor_shading_model_config.json  captain_afro_shading_model_config.json  captain_shading_model_config.json  duck_ten_shading_model_config.json  eight_pair_shading_model_config.json
examples/grinch_hue_vcm_retest/: conversion_report.json  palette.csv  region_colorgroup.3mf  region_materials.mtl  region_materials_face_palette_indices.npy  region_materials_palette.npy
examples/grinch_legacy_retest/: conversion_report.json  palette.csv  region_colorgroup.3mf  region_materials.mtl
examples/grinch_retest/: conversion_report.json  palette.csv  region_colorgroup.3mf  region_materials.mtl
src/color3dconverter/: __init__.py  advanced_experiments.py  bake.py  benchmark.py  cli.py  color_adjustments.py  export_3mf.py  export_obj.py  export_obj_vertex_colors.py  face_regions.py  fixtures.py  handoff.py  lane_chooser.py  model_io.py  paint_cleanup.py  pipeline.py  production.py  provider_oracle.py  regions.py  repair_then_bake.py  shading_model.py  surface_transfer.py  validation.py
tests/: test_advanced_experiments.py  test_bake.py  test_benchmark.py  test_color_adjustments.py  test_export_3mf.py  test_export_obj_vertex_colors.py  test_face_regions.py  test_fixtures.py  test_handoff.py  test_lane_chooser.py  test_model_io.py  test_paint_cleanup.py  test_pipeline.py  test_production.py  test_provider_oracle.py  test_regions.py  test_repair_then_bake.py  test_shading_model.py  test_surface_transfer.py
